--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ url: ""
 github:
   username: szehoyeu # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+#twitter:
+ # username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
